--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+#theme: landscape
+theme: prontera
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -73,3 +74,5 @@ deploy:
   type: git
   repo: git@github.com:bayo-jsc/bayo-jsc.github.io.git
   branch: master
+
+
