--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/prontera"]
 	path = themes/prontera
-	url = https://github.com/AngryPowman/hexo-theme-prontera
+	url = git@github.com:bayo-jsc/hexo-theme-prontera.git
