--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "hexo": {
     "version": "3.3.7"
   },
+  "scripts": {
+    "server": "hexo server",
+    "deploy": "hexo generate --deploy",
+    "hexo": "hexo"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-cli-extras": "^1.0.4",
