--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
+  },
+  "engines": {
+    "node": ">=8.1.3"
   }
 }
