--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,12 @@ before_script:
 script:
     - yarn hexo generate
 
-after_success:
-    - mkdir .deploy
-    - cd .deploy
-    - git init
-    - git remote add origin $DEPLOY_REPO
-    - cp -r ../public/* .
-    - git add -A .
-    - git commit -m 'Site updated'
-    - git push --force --quiet origin master
+deploy:
+  provider: pages
+  skip_cleanup: false
+  target_branch: master
+  local_dir: public
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: dev
     
