--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ deploy:
   provider: pages
   skip_cleanup: false
   target_branch: master
-  local_dir: public
+  local_dir: public/
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
     branch: dev
