--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: node_js
 node_js:
     - "8.1.3"
-    
-branches:
-    only:
-    - dev
 
 install:
     - yarn --frozen-lockfile
@@ -18,9 +14,9 @@ script:
 
 deploy:
   provider: pages
-  skip_cleanup: false
+  skip_cleanup: true
   target_branch: master
-  local_dir: public/
+  local_dir: public
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
     branch: dev
