--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: node_js
 node_js:
     - "8.1.3"
 
+before_install: yarn global add greenkeeper-lockfile
+
 install:
     - yarn --frozen-lockfile
-
-before_script:
-    - git config --global user.name 'imcvampire'
-    - git config --global user.email 'quocanh96@gmail.com'
+    
+before_script: greenkeeper-lockfile-update
+after_script: greenkeeper-lockfile-upload
 
 script:
     - yarn hexo generate
