--- a/themes/vexo/_config.yml
+++ b/themes/vexo/_config.yml
@@ -6,17 +6,18 @@ excerpt_link: More...
 
 menu:
  Posts: /
- # About: /about
+ # About: /about/
+ # Projects: /project/
 
 # highlight
 highlight:
   tomorrow
 
 # Gitment
-# gitment_owner: yanm1ng
-# gitment_repo: yanm1ng.github.io
-# gitment_oauth_id: 0f87e490e00ee3fd87ef
-# gitment_oauth_secret: 4a9d2b148e7971c2201ad12131ce8bf8159ccd2e
+gitment_owner: bayo-jsc
+gitment_repo: bayo-jsc.github.io
+gitment_oauth_id: 1127ebf0f1ae6789773b
+gitment_oauth_secret: b417b808bc2e37a462456b7c7bc58c3da110142f
 
 about:
   banner: http://file.muyutech.com/about.jpg
