--- a/themes/vexo/_config.yml
+++ b/themes/vexo/_config.yml
@@ -14,7 +14,7 @@ highlight:
   tomorrow
 
 # Gitment
-gitment_owner: bayo-jsc
+gitment_owner: imcvampire
 gitment_repo: bayo-jsc.github.io
 gitment_oauth_id: 1127ebf0f1ae6789773b
 gitment_oauth_secret: f7e8b52d23049229a00a23f2ede517880ed89329
