feat: add auto link

--- a/_config.yml
+++ b/_config.yml
@@ -96,4 +96,12 @@ nofollow:
 	exclude:
     - www.bayo.vn
 
+autolinker:
+  enable: true
+  newWindow: true
+  urls: true
+  email: true
+  tel: true
+  twitter: true
+
 
