--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "hexo-autonofollow": "^1.0.1",
     "hexo-cli-extras": "^1.0.4",
     "hexo-deployer-git": "^0.3.0",
+    "hexo-filter-author-from-git": "^0.1.1",
+    "hexo-filter-date-from-git": "^0.1.2",
     "hexo-generator-amp": "^3.0.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -23,6 +25,9 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-seo-friendly-sitemap": "^0.0.21",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-inject": "^1.0.0",
+    "hexo-math": "^3.0.2",
+    "hexo-offline": "^0.2.2",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-marked": "^0.2.10",
