--- a/_config.yml
+++ b/_config.yml
@@ -115,3 +115,5 @@ offline:
 
 math:
   engine: 'mathjax'
+  mathjax:
+    src: https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
