--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
     - "8.1.3"
 
 before_install: 
-    - yarn global add greenkeeper-lockfile
+    - npm install -g add greenkeeper-lockfile
     - greenkeeper-lockfile-update
 
 install:
@@ -12,7 +12,7 @@ install:
 after_script: greenkeeper-lockfile-upload
 
 script:
-    - yarn hexo generate
+    - npm run hexo generate
 
 deploy:
   provider: pages
