--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
     - greenkeeper-lockfile-update
 
 install:
-    - npm install
+    - yarn
     
 after_script: greenkeeper-lockfile-upload
 
