--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "hexo": "hexo"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
+    "hexo": "^3.3.7",
     "hexo-autolinker": "^1.0.1",
     "hexo-autonofollow": "^1.0.1",
     "hexo-cli-extras": "^1.0.4",
@@ -22,17 +22,17 @@
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.0",
-    "hexo-generator-index": "^0.2.0",
-    "hexo-generator-seo-friendly-sitemap": "^0.0.21",
+    "hexo-generator-index": "^0.2.1",
+    "hexo-generator-seo-friendly-sitemap": "0.0.21",
     "hexo-generator-tag": "^0.2.0",
     "hexo-inject": "^1.0.0",
     "hexo-math": "^3.0.2",
     "hexo-offline": "^0.2.2",
-    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-jade": "^0.4.1",
-    "hexo-renderer-marked": "^0.2.11",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.2.1"
   },
   "engines": {
     "node": ">=8.1.3"
