--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Bayo Engineering
 subtitle:
 description: Everyday life of Bayo Engineering
 author: Bayo
-language: English
+language: en
 timezone: Asia/Ho_Chi_Minh
 
 # URL
