--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: Everyday life of Bayo Engineering
 author: Bayo
 language: en
 timezone: Asia/Ho_Chi_Minh
+email: bayo-tech@googlegroups.com
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'      
