--- a/themes/vexo/_config.yml
+++ b/themes/vexo/_config.yml
@@ -1,5 +1,5 @@
-author: bayo-jsc
-description: Bayo
+author: Bayo
+description: Everyday life of Bayo Engineering
 keyword: travel, bayo, engineering
 
 excerpt_link: More...
