--- a/themes/vexo/_config.yml
+++ b/themes/vexo/_config.yml
@@ -6,8 +6,8 @@ excerpt_link: More...
 
 menu:
  Posts: /
- # About: /about/
- # Projects: /project/
+ About: /about/
+ Projects: /project/
 
 # highlight
 highlight:
