feat: update layout

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ author: Bayo
 language: en
 timezone: Asia/Ho_Chi_Minh
 email: bayo-tech@googlegroups.com
+github_username: bayo-jsc
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'      
