--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
     - "8.1.3"
 
 before_install: 
-    - npm install -g add greenkeeper-lockfile
+    - npm install -g greenkeeper-lockfile
     - greenkeeper-lockfile-update
 
 install:
